chore: change header and footer style

--- a/src/app/public/components/footer/footer.component.html
+++ b/src/app/public/components/footer/footer.component.html
@@ -22,13 +22,15 @@
             </clipPath>
           </defs>
         </svg>
-        R. Alberto Caldeira, 155 - Centro, <br> Guanhães - MG, 39740-000
+        <div>
+          R. Alberto Caldeira, 155 - Centro, <br> Guanhães - MG, 39740-000
+        </div>
       </li>
       <li>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
           <path d="M1.83 2.31384L2.88 1.40384C4.09 0.193838 6.05 0.193838 7.26 1.40384C7.29 1.43384 9.14 3.84384 9.14 3.84384C10.28 5.04384 10.28 6.93384 9.14 8.12384L7.98 9.58384C9.44 12.8938 11.71 15.1738 14.91 16.5338L16.37 15.3638C17.56 14.2138 19.46 14.2138 20.65 15.3638C20.65 15.3638 23.06 17.2138 23.09 17.2438C24.3 18.4538 24.3 20.4138 23.14 21.5738L22.14 22.7238C20.99 23.8738 19.44 24.5038 17.76 24.5038C10.12 24.5038 0 14.3738 0 6.74384C0 5.07384 0.630001 3.51384 1.83 2.32384V2.31384ZM17.76 22.4938C18.9 22.4938 19.95 22.0738 20.67 21.3438L21.67 20.1938C22.08 19.7838 22.1 19.1138 21.71 18.6838C21.71 18.6838 19.32 16.8438 19.29 16.8138C18.88 16.4038 18.16 16.4038 17.74 16.8138C17.71 16.8438 15.7 18.4538 15.7 18.4538C15.42 18.6738 15.05 18.7338 14.72 18.6038C10.58 17.0238 7.61 14.0638 5.9 9.79384C5.77 9.46384 5.82 9.08384 6.05 8.79384C6.05 8.79384 7.66 6.77384 7.68 6.75384C8.11 6.32384 8.11 5.63384 7.68 5.20384C7.65 5.17384 5.81 2.78384 5.81 2.78384C5.38 2.39384 4.71 2.40384 4.25 2.86384L3.2 3.77384C2.43 4.54384 2 5.59384 2 6.73384C2 13.6938 11.77 22.4938 17.76 22.4938Z" fill="#BAEBD7"/>
         </svg>
-        (33)3421-7071
+        <div>(33)3421-7071</div>
       </li>
       <li>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
@@ -41,7 +43,7 @@
             </clipPath>
           </defs>
         </svg>
-        contato&#64;solucoesagropecuarias.com
+        <div>contato&#64;solucoesagropecuarias.com</div>
       </li>
     </ul>
     <ul class="socials">
