feat: create hero

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -1,3 +1,28 @@
 <section id="hero">
-
+  <div class="container">
+    <div class="texts">
+      <span>GR Soluções Agropecuárias</span>
+      <h1>
+        <span>Consultoria</span> e <br /> assessoria para <br /> <span>produtores rurais.</span>
+      </h1>
+      <p>
+        Você quer aumentar a sua produtividade e <br /> melhorar a sua gestão rural?
+      </p>
+      <button class="btn btn-transp">
+        Entrar em contato!
+      </button>
+    </div>
+  </div>
+  <img class="home-img" src="assets/home-img.png" alt="">
+  <div class="validations">
+    <div>
+      <h4>+20k</h4>
+      <span>Produtores atendidos</span>
+    </div>
+    <div>
+      <h4>+10</h4>
+      <span>Produtores atendidos</span>
+    </div>
+  </div>
+</section>
 </section>
