feat: create what we do

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -25,4 +25,14 @@
     </div>
   </div>
 </section>
+<section id="what-we-do">
+  <div class="container">
+    <img src="assets/what-we-do.png" alt="Duas mulheres sorridentes vendo um notebook, letras abaixo na imagem dizendo produtor rural">
+    <div class="texts">
+      <h2>O que fazemos:</h2>
+      <p>t O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro.</p>
+      <button class="btn btn-transp">Entrar em contato!</button>
+    </div>
+  </div>
+</section>
 </section>
