feat: create services

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -35,4 +35,45 @@
     </div>
   </div>
 </section>
+<section id="services">
+  <div class="container">
+    <div class="texts">
+      <img src="assets/logo-green.png" alt="">
+      <h2>Conheça os <br /> nossos <span>Serviços:</span></h2>
+      <p>
+        Com uma equipe qualificada e experiente,
+        <br />
+        buscamos entender as necessidades e os
+        <br />
+        objetivos de cada cliente e oferecer soluções
+        <br />
+        personalizadas e eficientes.
+      </p>
+      <button class="btn btn-transp">Saiba mais</button>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <img src="assets/card-1.png" alt="">
+        <h4>Gerenciamento de imóveis rurais e urbanos</h4>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+      </div>
+      <div class="card">
+        <img src="assets/card-2.png" alt="">
+        <h4>Elaboração de projetos de crédito rural </h4>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+      </div>
+      <div class="card">
+        <img src="assets/card-3.png" alt="">
+        <h4>Regularização de documentos rurais</h4>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+      </div>
+      <div class="card">
+        <img src="assets/card-4.png" alt="">
+        <h4>Licença ambientais</h4>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+      </div>
+    </div>
+  </div>
+  <img class="bg" src="assets/services.png" alt="">
+</section>
 </section>
