feat: create branches

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -76,4 +76,38 @@
   </div>
   <img class="bg" src="assets/services.png" alt="">
 </section>
+<section id="branches">
+  <div class="container">
+    <img src="assets/branches.png" alt="">
+    <div class="content">
+      <h2>Para te atender:</h2>
+      <div class="buttons">
+        <button class="btn btn-transp">
+          <img src="assets/simple-logo.png" alt="">
+          Sede: Guanhaes
+        </button>
+        <button class="btn btn-transp">
+          <img src="assets/simple-logo.png" alt="">
+          Curvelo
+        </button>
+        <button class="btn btn-transp">
+          <img src="assets/simple-logo.png" alt="">
+          Virginópolis
+        </button>
+        <button class="btn btn-transp">
+          <img src="assets/simple-logo.png" alt="">
+          São Gotardo
+        </button>
+        <button class="btn btn-transp">
+          <img src="assets/simple-logo.png" alt="">
+          Capelinha
+        </button>
+        <button class="btn btn-transp">
+          <img src="assets/simple-logo.png" alt="">
+          Baixo Guandu
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
 </section>
