feat: create our story

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -110,4 +110,22 @@
     </div>
   </div>
 </section>
+<section id="our-story">
+  <div class="container">
+    <img src="assets/video-our-story.png" alt="">
+    <div class="texts">
+      <h2>
+        Saiba mais sobre
+        <br />
+        <strong>A Nossa História</strong>
+      </h2>
+      <p>
+        O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro.
+        <br />
+        O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto
+      </p>
+      <button class="btn btn-transp">Entrar em contato!</button>
+    </div>
+  </div>
+</section>
 </section>
