--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -305,4 +305,37 @@
   }
 }
 
+#blog {
+  padding-block: 36px 60px;
+  .container {
+    padding-inline: 100px !important;
+    h2 {
+      color: #4B4B4B;
+      font-family: "Inter", sans-serif;
+      font-size: 40px;
+      font-weight: 600;
+      line-height: 140%;
+      letter-spacing: 4px;
+      margin-bottom: 50px;
+    }
+    .posts {
+      display: flex;
+      gap: 16px;
+      justify-content: space-between;
+      margin-bottom: 45px;
+      .post {
+        display: flex;
+        flex-direction: column;
+        p {
+          display: inline;
+          color: #4B4B4B;
+          font-size: 18px;
+          font-weight: 500;
+          line-height: 156%;
+          letter-spacing: 1.8px;
+          margin-block: 20px 8px;
+        }
+      }
+    }
+  }
 }
