--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -21,7 +21,7 @@
     </div>
     <div>
       <h4>+10</h4>
-      <span>Produtores atendidos</span>
+      <span>Anos de experiência</span>
     </div>
   </div>
 </section>
@@ -78,7 +78,7 @@
 </section>
 <section id="branches">
   <div class="container">
-    <img src="assets/branches.png" alt="">
+    <img src="assets/branches.png" class="main-image" alt="">
     <div class="content">
       <h2>Para te atender:</h2>
       <div class="buttons">
@@ -112,11 +112,10 @@
 </section>
 <section id="our-story">
   <div class="container">
-    <img src="assets/video-our-story.png" alt="">
+    <img src="assets/video-our-story.png" class="video" alt="">
     <div class="texts">
       <h2>
         Saiba mais sobre
-        <br />
         <strong>A Nossa História</strong>
       </h2>
       <p>
