--- a/src/app/public/components/footer/footer.component.scss
+++ b/src/app/public/components/footer/footer.component.scss
@@ -12,17 +12,46 @@
   justify-content: space-between;
   margin-bottom: 60px;
 
+  @media (max-width: 991px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+
+    & > img {
+      order: 1;
+    }
+  }
+
+  @media (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+  }
+
   li {
     color: #BAEBD7;
   }
 
   .nav-list {
+    @media (max-width: 991px) {
+      order: 4;
+      justify-self: center;
+    }
+
+    @media (max-width: 767px) {
+      order: 2;
+    }
+
     li:not(:last-child) {
       margin-bottom: 20px;
     }
   }
 
   .contacts {
+    @media (max-width: 991px) {
+      order: 3;
+    }
+
     li {
       display: flex;
       gap: 12px;
@@ -30,11 +59,31 @@
         margin-bottom: 20px;
       }
     }
-
   }
 
   .socials {
     display: flex;
     gap: 20px;
+
+    @media (max-width: 1200px) {
+      flex-direction: column;
+    }
+
+    @media (max-width: 991px) {
+      flex-direction: row;
+      order: 2;
+      justify-self: center;
+    }
+
+    @media (max-width: 767px) {
+      order: 4;
+    }
+  }
+}
+
+@media (max-width: 1400px) {
+  .ger-big {
+    width: 100%;
+    height: auto;
   }
 }
