--- a/src/app/public/components/header/header.component.html
+++ b/src/app/public/components/header/header.component.html
@@ -9,10 +9,13 @@
     <li><a>Blog</a></li>
   </ul>
   <div class="mobile-options">
-    <svg (click)="toggleModal()" width="32" height="25" viewBox="0 0 32 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M3 3H29" stroke="#031749" stroke-width="4.28571" stroke-linecap="round"/>
-      <path d="M3 12.5754H29" stroke="#031749" stroke-width="4.28571" stroke-linecap="round"/>
-      <path d="M3 22.4168H29" stroke="#031749" stroke-width="4.28571" stroke-linecap="round"/>
+    <svg (click)="toggleModal()" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+      <mask id="mask0_94_35" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="25">
+        <rect y="0.283936" width="24" height="24" fill="#D9D9D9"/>
+      </mask>
+      <g mask="url(#mask0_94_35)">
+        <path d="M3 21.2839V19.2839H21V21.2839H3ZM3 13.2839V11.2839H21V13.2839H3ZM3 5.28394V3.28394H21V5.28394H3Z" fill="white"/>
+      </g>
     </svg>
     <div class="nav-list-mobile" [class.open]="modalOpen()">
       <div class="nav-list-mobile-header">
