feat(header): smooth scroll for navigation links
Added smooth scroll functionality to header navigation links. Adjusted media queries and updated link hover color in the header component.

--- a/src/app/public/components/header/header.component.scss
+++ b/src/app/public/components/header/header.component.scss
@@ -60,7 +60,7 @@ a {
 
 a.active,
 li:hover > a {
-  color: #d0d0d0 !important;
+  color: #96BF19 !important;
   text-decoration: none !important;
 }
 
