chore: change name

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section id="hero">
   <div class="container">
     <div class="texts">
-      <span>GR Soluções Agropecuárias</span>
+      <span>G&R Soluções Agropecuárias</span>
       <h1>
         <span>Consultoria</span> e <br /> assessoria para <br /> <span>produtores rurais.</span>
       </h1>
