fix(home): adjust padding for services and branches section
Updated padding attributes to improve layout spacing on the home page. This change enhances the visual structure and consistency for different screen sizes.

--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -243,7 +243,7 @@
 #services {
   display: flex;
   position: relative;
-  margin-top: 74px;
+  padding-top: 80px;
 
   @media (max-width: 767px) {
     flex-direction: column;
@@ -380,7 +380,7 @@
 }
 
 #branches {
-  padding-block: 0 40px;
+  padding-block: 80px 40px;
   .container {
     display: flex;
     gap: 21px;
