feat(blog): add blog functionality with new routes and components
This update introduces a blog section to the application, featuring new routes and components for displaying blog posts. It includes a new `BlogService` for fetching posts from a WordPress API, and modifies the existing application configuration to integrate the HTTP client. Additionally, redundant CSS and HTML segments related to a static blog display have been removed.

--- a/src/app/public/components/footer/footer.component.html
+++ b/src/app/public/components/footer/footer.component.html
@@ -2,12 +2,12 @@
   <div class="lists">
     <img src="assets/logo.png" alt="">
     <ul class="nav-list">
-      <li>Inicio</li>
-      <li>Sobre nós</li>
-      <li>Serviços</li>
-      <li>Filias</li>
-      <li>Nossa História</li>
-      <li>Blog</li>
+      <li><a (click)="scrollToElement('hero')">Início</a></li>
+      <li><a (click)="scrollToElement('what-we-do')">Sobre nós</a></li>
+      <li><a (click)="scrollToElement('services')">Serviços</a></li>
+      <li><a (click)="scrollToElement('branches')">Filias</a></li>
+      <li><a (click)="scrollToElement('our-story')">Nossa História</a></li>
+      <li routerLink="/blog"><a>Blog</a></li>
     </ul>
     <ul class="contacts">
       <li>
