--- a/src/app/public/components/header/header.component.html
+++ b/src/app/public/components/header/header.component.html
@@ -6,7 +6,7 @@
     <li><a (click)="scrollToElement('services')">Serviços</a></li>
     <li><a (click)="scrollToElement('branches')">Filias</a></li>
     <li><a (click)="scrollToElement('our-story')">Nossa História</a></li>
-    <li><a>Blog</a></li>
+    <li routerLink="/blog"><a>Blog</a></li>
   </ul>
   <div class="mobile-options">
     <svg (click)="toggleModal()" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
@@ -41,7 +41,7 @@
           <li><a (click)="scrollToElement('services')">Serviços</a></li>
           <li><a (click)="scrollToElement('branches')">Filias</a></li>
           <li><a (click)="scrollToElement('our-story')">Nossa História</a></li>
-          <li><a>Blog</a></li>
+          <li routerLink="/blog"><a>Blog</a></li>
         </ul>
       </div>
     </div>
