--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -132,28 +132,4 @@
     </div>
   </div>
 </section>
-<section id="blog">
-  <div class="container">
-    <h2>Blog</h2>
-    <div class="posts">
-      <div class="post">
-        <img src="assets/post-1.png" alt="">
-        <p>O Lorem Ipsum é um texto modelo da indústria</p>
-        <strong>Ler mais</strong>
-      </div>
-      <div class="post">
-        <img src="assets/post-2.png" alt="">
-        <p>O Lorem Ipsum é um texto modelo da indústria</p>
-        <strong>Ler mais</strong>
-      </div>
-      <div class="post">
-        <img src="assets/post-3.png" alt="">
-        <p>O Lorem Ipsum é um texto modelo da indústria</p>
-        <strong>Ler mais</strong>
-      </div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <button class="btn btn-green">Ver mais</button>
-    </div>
-  </div>
-</section>
+<app-section-blog></app-section-blog>
